# mini

./: .cursorrules  10.0.20348.0  Cargo.toml  ENVIRONMENT-PATHS.md  PROJECT_STATUS.md
crates/activity_indicator/: Cargo.toml
crates/agent/: Cargo.toml
crates/agent_ui/: Cargo.toml
crates/assistant_text_thread/: Cargo.toml
crates/auto_update/: Cargo.toml
crates/auto_update_ui/: Cargo.toml
crates/buffer_diff/: Cargo.toml
crates/channel/: Cargo.toml
crates/cli/: Cargo.toml
crates/client/: Cargo.toml
crates/cloud_zeta2_prompt/: Cargo.toml
crates/codestral/: Cargo.toml
crates/collab/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/context_server/: Cargo.toml
crates/copilot/: Cargo.toml
crates/crashes/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/docs_preprocessor/: Cargo.toml
crates/edit_prediction/: Cargo.toml
crates/edit_prediction_cli/: Cargo.toml
crates/edit_prediction_context/: Cargo.toml
crates/edit_prediction_types/: Cargo.toml
crates/edit_prediction_ui/: Cargo.toml
crates/editor/: Cargo.toml
crates/eval_utils/: Cargo.toml
crates/extension/: Cargo.toml
crates/extension_api/: Cargo.toml
crates/extension_host/: Cargo.toml
crates/extensions_ui/: Cargo.toml
crates/fs/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/gpui/: Cargo.toml
crates/keymap_editor/: Cargo.toml
crates/language_models/: Cargo.toml
crates/language_tools/: Cargo.toml
crates/mini_ui/: Cargo.toml
crates/mini_ui/src/: editor_margin.rs  lib.rs  tray_icon.rs  welcome_screen.rs  window_manager.rs  window_state.rs
(+82 files in other folders)
