[package]
name = "mini_ui"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
gpui.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
paths.workspace = true
anyhow.workspace = true
util.workspace = true
log.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
]}

[lints]
workspace = true
